# FastOctomap

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  kernel_analysis.md  prepare_data_file.sh  test.sh
FastOctree/: CMakeLists.txt  FastOctree.c  FastOctree.h  NodeStack.c  NodeStack.h  Stack.c  Stack.h  fast_code_utils.h
kernel_analysis/: Readme.md  conversions  conversions.c  extracted_node_computation.c  original.c  remove_node_switch.c  test.c  with_terminal_logic.c  with_terminal_logic_converted.c
kernel_analysis/test/: extracted_node_computation.c  lists_of_params1.c  original.c  original_converted.c  remove_node_switch.c  remove_node_switch_ifs.c  test  test.c  test_list  test_list.c  with_terminal_logic_converted.c
test_program/: CMakeLists.txt  test_main.cpp
